[project]
name = "pygame-chess"
version = "0.1.0"
description = ""
authors = [
    {name = "er1argh",email = "er1arghbox@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
